load("@build_bazel_rules_android//android:rules.bzl", "android_library")

licenses(["notice"])

package(default_visibility = ["//:__subpackages__"])

android_library(
    name = "xwing_hpke_conscrypt_encrypt",
    srcs = ["XWingHpkeConscryptEncrypt.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:accesses_partial_key-android",
        "//src/main/java/com/google/crypto/tink:hybrid_encrypt-android",
        "//src/main/java/com/google/crypto/tink/config/internal:tink_fips_util-android",
        "//src/main/java/com/google/crypto/tink/hybrid:hpke_parameters-android",
        "//src/main/java/com/google/crypto/tink/hybrid:hpke_public_key-android",
        "//src/main/java/com/google/crypto/tink/hybrid/internal:hpke_util-android",
        "//src/main/java/com/google/crypto/tink/internal:conscrypt_util-android",
        "//src/main/java/com/google/crypto/tink/internal:util-android",
        "//src/main/java/com/google/crypto/tink/subtle:bytes-android",
    ],
)

android_library(
    name = "xwing_hpke_conscrypt_decrypt",
    srcs = ["XWingHpkeConscryptDecrypt.java"],
    deps = [
        ":xwing_hpke_conscrypt_encrypt",
        "//src/main/java/com/google/crypto/tink:accesses_partial_key-android",
        "//src/main/java/com/google/crypto/tink:hybrid_decrypt-android",
        "//src/main/java/com/google/crypto/tink:hybrid_encrypt-android",
        "//src/main/java/com/google/crypto/tink:insecure_secret_key_access-android",
        "//src/main/java/com/google/crypto/tink/hybrid:hpke_parameters-android",
        "//src/main/java/com/google/crypto/tink/hybrid:hpke_private_key-android",
        "//src/main/java/com/google/crypto/tink/hybrid/internal:hpke_util-android",
        "//src/main/java/com/google/crypto/tink/internal:conscrypt_util-android",
        "//src/main/java/com/google/crypto/tink/internal:util-android",
    ],
)
