load("@rules_android//android:rules.bzl", "android_library")
load("@rules_java//java:defs.bzl", "java_library")
licenses(["notice"])

package(
    default_testonly = 1,
    default_visibility = ["//:__subpackages__"],
)

android_library(
    name = "jwt_signature_test_util-android",
    srcs = ["JwtSignatureTestUtil.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:accesses_partial_key-android",
        "//src/main/java/com/google/crypto/tink:insecure_secret_key_access-android",
        "//src/main/java/com/google/crypto/tink:public_key_sign-android",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_ecdsa_parameters-android",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_ecdsa_private_key-android",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_ecdsa_public_key-android",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_signature_private_key-android",
        "//src/main/java/com/google/crypto/tink/subtle:base64-android",
        "//src/main/java/com/google/crypto/tink/util:secret_big_integer-android",
        "@maven//:com_google_code_gson_gson",
    ],
)

java_library(
    name = "jwt_signature_test_util",
    srcs = ["JwtSignatureTestUtil.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:accesses_partial_key",
        "//src/main/java/com/google/crypto/tink:insecure_secret_key_access",
        "//src/main/java/com/google/crypto/tink:public_key_sign",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_ecdsa_parameters",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_ecdsa_private_key",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_ecdsa_public_key",
        "//src/main/java/com/google/crypto/tink/jwt:jwt_signature_private_key",
        "//src/main/java/com/google/crypto/tink/subtle:base64",
        "//src/main/java/com/google/crypto/tink/util:secret_big_integer",
        "@maven//:com_google_code_gson_gson",
    ],
)
